Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1014,12 +1014,12 @@
 
     // ── FIREBASE CONFIG ──
     const firebaseConfig = {
-        apiKey: "TU_API_KEY_AQUI",
-        authDomain: "TU_PROYECTO.firebaseapp.com",
-        projectId: "TU_PROYECTO_ID",
-        storageBucket: "TU_PROYECTO.firebasestorage.app",
-        messagingSenderId: "TU_SENDER_ID",
-        appId: "TU_APP_ID"
+        apiKey: "AIzaSyDfEwSZtRYDsbEzDI_KGBEEPtIttOgfV8o",
+        authDomain: "v1zions-gg-b5181.firebaseapp.com",
+        projectId: "v1zions-gg-b5181",
+        storageBucket: "v1zions-gg-b5181.firebasestorage.app",
+        messagingSenderId: "886732747989",
+        appId: "1:886732747989:web:1e00ec9a4a3ff5b3711e5c"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
